--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="quiz-container" id="q">
 
  <div class="quiz-header">
-    <h2 id="questions">questions</h2>
+    <h2 id="question">questions</h2>
 
 
  <ul>
