--- a/index.html
+++ b/index.html
@@ -1,51 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-</head>
-<body>
-    
-  <div class="quiz-container" id="q">
-
- <div class="quiz-header">
-    <h2 id="question">questions</h2>
-
-
- <ul>
-    <li>
-        <input type="radio" name="answere" id="a" class="asnwere">
-        <label for="a" id="a_text">Questions</label>
-    </li>
-
-    <li>
-        <input type="radio" name="answere" id="b" class="asnwere">
-        <label for="b" id="b_text">Questions</label>
-    </li>
-
-    <li>
-        <input type="radio" name="answere" id="c" class="asnwere">
-        <label for="c" id="c_text">Questions</label>
-    </li>
-
-    <li>
-        <input type="radio" name="answere" id="d" class="asnwere">
-        <label for="d" id="d_text">Questions</label>
-    </li>
-    
- </ul>
-
- </div>
-
-
- <button id="submit">submit</button>
-  </div>
-
-
-<script src="./script.js"></script>
-
-
-</body>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <div class="quiz-container" id="quiz">
+      <div class="quiz-header">
+        <h2 id="questions">Questions</h2>
+        <ul>
+          <li>
+            <input type="radio" name="answer" id="a" class="answer" />
+            <label for="a" id="a_text">London</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="b" class="answer" />
+            <label  for="b" id="b_text">Paris</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="c" class="answer" />
+            <label for="c" id="c_text">Berlin</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="d" class="answer" />
+            <label for="" id="d_text">Rome</label>
+          </li>
+        </ul>
+      </div>
+      <button id="submit">Submit</button>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
